--- a/frontend/src/app/dashboard/dashboard-home/dashboard-home.component.html
+++ b/frontend/src/app/dashboard/dashboard-home/dashboard-home.component.html
@@ -14,19 +14,19 @@
   <h3>Monthly RFQs Trend</h3>
   <div class="chart-wrapper">
     <ngx-charts-bar-vertical
-      [results]="monthlyRFQs"
-      [xAxis]="true"
-      [yAxis]="true"
-      [gradient]="false"
-      [showXAxisLabel]="true"
-      [showYAxisLabel]="true"
-      xAxisLabel="Month"
-      yAxisLabel="RFQs"
-      [scheme]="colorSchemePO"
-      [animations]="true"
-      [barPadding]="8"
-      [roundEdges]="true">
-    </ngx-charts-bar-vertical>
+          [results]="monthlyRFQs"
+          [xAxis]="true"
+          [yAxis]="true"
+          [gradient]="false"
+          [showXAxisLabel]="true"
+          [showYAxisLabel]="true"
+          xAxisLabel="Month"
+          yAxisLabel="RFQs"
+          [scheme]="colorSchemeRFQ"
+          [animations]="true"
+          [barPadding]="8"
+          [roundEdges]="true">
+        </ngx-charts-bar-vertical>
   </div>
 </section>
 
