--- a/frontend/src/app/dashboard/profile/profile.component.css
+++ b/frontend/src/app/dashboard/profile/profile.component.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 36px 0;
+    padding: 10px 0;
+    padding-top: 80px;
+    
 }
 
 .profile-card {
@@ -15,7 +17,6 @@
   text-align: center;
   position: relative;
   transition: box-shadow 0.2s;
-  margin-top: 100px;
 }
 
 .profile-card:hover {
